2003-05-31  Mikhael Goikhman  <migo@homemail.com>

	* documentation/manpages/manpages2php:
	fixed one link to be GET ready

	* documentation/manpages/stable/*.php:
	* documentation/manpages/unstable/*.php:
	* documentation/perllib/*.php:
	regenerated manpages from 2.4.16 and 2.5.7

	* authors/index.php:
	* documentation/faq/index.php:
	* latest_news/index.php:
	updated files for 2.5.7

	* birthday/index.php:
	s/birthday_celebration1.gif/birthday_celebration2.gif/ for now

2003-05-30  Uwe Pross  <uwe.pross@gmx.net>

	* birthday/index.php: 
	* birthday/developers/* 
	Birthday stuff

	* index.php
	Birthday logo

2003-05-23  Bob Woodside  <dumbledore@woodsway.com>

	* links.php:
        Added link to Dorothy Robinson's Decors page; minor
        reorganization of page contents.

2003-05-23  Mikhael Goikhman  <migo@homemail.com>

	* css/default.css:
	fixed a.nohilight

	* logo-competition/*:
	updated entries of Coji_Morishita, Anna_MacLachlan, Phil_Harper

2003-05-16  Uwe Pross  <uwe.pross@gmx.net>

	* class + theme files:
	added functionality to customize the page 
	
	* web-theme/classes/base_class.inc:
	use theme description to init style_array
	changed insert_timestamp to display change instead of access time.

	* screenshots/desktops.php:
	fixed gif entry in screenshot link.
	
2003-05-12  Dan Espen  <dane@mk.telcordia.com>

        * screenshots/make-php.pl: Fixup comments, fix matching on lines in desktops.php,
        put diff check back.

        * screenshots/desktops.php: New screenshot from Maciej Delmanowski.	

2003-05-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* contact/index.php:
	--> ask xmms questions on the XMMS mailing list

2003-05-05  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* css/default.css:
	added linebreaks and changed background color for pre.cvs pre.doc
	tags.

	* documentation/faq/index.php:
	new generated from current cvs version

	* documentation/faq/faq2php:
	changed to new template name - added comment
