@@ -247,7 +247,7 @@ $navgen_url      = $rel_path."/navgen.php";
 // release information
 //--------------------------------------------------------------------
 $latest_stable_release = "2.4.16";
-$latest_unstable_release = "2.5.6";
+$latest_unstable_release = "2.5.7";
 
 ?>
 
