@@ -11,6 +11,8 @@
 	* authors/index.php:
 	* documentation/faq/index.php:
 	* latest_news/index.php:
+	* definitions.inc:
+	* download/index.php:
 	updated files for 2.5.7
 
 	* birthday/index.php:
